syntax = "proto3";

package github.udarya.mockserver;

option java_outer_classname = "MockServerApiProto";
option java_package = "io.github.udarya.mockserver";

service MockServerAPI {
  // Add mock request/response to the mock service.
  rpc AddMockData(AddMockDataRequest) returns (AddMockDataResponse);
  rpc VerifyMethodCall(VerifyMethodCallRequest) returns (VerifyMethodCallResponse);
  rpc ResetMethodCalls(ResetMethodCallsRequest) returns (ResetMethodCallsResponse);
}

message AddMockDataRequest {
  string service_name = 1;
  string method_name = 2;
  string request_json = 3;
  string response_json = 4;
}

message AddMockDataResponse {

}

message VerifyMethodCallRequest {
  string method_name = 1;
  // Request with default fields. Use JsonFormat from protobuf-java-util library
  string request_json = 2;
  // Exclude these fields in comparing
  repeated string exclude_fields = 3;
}

message VerifyMethodCallResponse {
  bool is_success = 1;
  string error_message = 2;
}

message ResetMethodCallsRequest {
  string method_name = 1;
}

message ResetMethodCallsResponse {

}
